# CloudSentinel-AI

./: .cursorrules  .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  INTEGRATION_COMPLETE.md  LICENSE  README.md  REMAINING_AUDIT_ISSUES.md  codealike.json  compare_costs.py  debug_encryption.py  docker-compose.prod.yml  docker-compose.yml  policy.json  prod.env.template  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml
app/: main.py
app/api/: connections.py  leaderboards.py  settings.py
app/api/v1/: admin.py  audit.py  billing.py  carbon.py  connections.py  costs.py  health_dashboard.py  jobs.py  leaderboards.py  onboard.py  usage.py  zombies.py
app/core/: auth.py  config.py  dependencies.py  exceptions.py  logging.py  middleware.py  pricing.py  rate_limit.py  security.py  security_production.py  sentry.py  tier_guard.py  timeout.py  tracing.py
app/db/: base.py  session.py
app/models/: anomaly_marker.py  attribution.py  aws_connection.py  azure_connection.py  background_job.py  carbon_settings.py  cloud.py  cost_audit.py  discovered_account.py  gcp_connection.py  llm.py  notification_settings.py  pricing.py  remediation.py  remediation_settings.py  security.py  tenant.py
app/modules/governance/: __init__.py
app/modules/notifications/: __init__.py
app/modules/optimization/: __init__.py
app/modules/reporting/: __init__.py
app/schemas/: connections.py  costs.py
app/services/: cache.py  scheduler.py
app/services/adapters/: aws.py  aws_cur.py  aws_multitenant.py  azure.py  base.py  cost_cache.py  cur_adapter.py  gcp.py  s3_parquet.py
app/services/analysis/: forecaster.py  tagging.py
app/services/aws/: __init__.py  region_discovery.py
app/services/billing/: __init__.py  currency.py  dunning_service.py  paystack_billing.py  webhook_retry.py
app/services/carbon/: __init__.py  budget_alerts.py  calculator.py  carbon_scheduler.py  graviton_analyzer.py
app/services/connections/: aws.py  azure.py  gcp.py
app/services/costs/: aggregator.py  attribution_engine.py  persistence.py
app/services/jobs/: cur_ingestion.py  processor.py
app/services/llm/: analyzer.py  analyzer_with_budget_fix.py  budget_manager.py  circuit_breaker.py  factory.py  guardrails.py  hybrid_scheduler.py  prompts.yaml  usage_tracker.py  zombie_analyzer.py
app/services/notifications/: __init__.py  email_service.py  slack.py
app/services/remediation/: autonomous.py  circuit_breaker.py
app/services/scheduler/: orchestrator.py  orchestrator_production.py
app/services/security/: audit_log.py  iam_auditor.py
app/services/zombies/: base.py  (+7 more)
app/tasks/: scheduler_tasks.py
cloudformation/: cloudsentinel-role.yaml  valdrix-role.yaml
dashboard/: package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
dashboard/e2e/: landing.test.ts
dashboard/src/: app.css  app.d.ts  hooks.server.ts
data/: emissions.csv
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DR_RUNBOOK.md  SOC2_CONTROLS.md  ZOMBIE_DETECTION_REFERENCE.md
docs/guides/: aws_scp_setup.md
docs/runbooks/: emergency_disconnect.md
migrations/: env.py
migrations/versions/: 016_add_dunning_columns.py  171defe4083a_check_schema.py  25ac817a176b_add_byok_and_api_keys.py  2e4e2f4112b1_sec_enable_rls_alembic_version.py  3203ef5d002a_add_llm_usage_table.py  58130c25a4ca_add_llm_budgets_table.py  6e0db32e8ee9_add_llm_usage_table.py  796761939f88_add_preferred_provider_and_preferred_.py  a1b2c3d4e5f6_add_background_jobs_table.py  a7604ecc1442_merge_conflicting_heads.py  ab12cd34ef56_add_blind_indexes.py  ac78ce137d62_add_pricing_and_currency_tables.py  af06395c042b_add_trial_started_at_to_tenants.py  b19f9f39261c_add_tenant_subscriptions_table.py  b8cca4316ecf_sec_enable_rls_all_tables.py  bc211fc9da0a_add_explainable_activeops_support.py  c1a2b3d4e5f6_add_max_deletions_safety_fuse.py  c5127e32a8b0_restore_multicloud_and_add_gcp_fields.py  c79ea79de972_add_range_partitioning_to_high_volume_.py  d2e3f4a5b6c7_add_tenant_subscriptions.py  e3f4a5b6c7d8_migrate_stripe_to_paystack.py  f8g9h0i1j2k3_audit_rls_hardening.py  f9d23abde562_sec_enable_rls_tenants.py
performance/: load_test.js
prometheus/: prometheus.yml
reports/audit/: CTO_PRESENTATION_GUIDE.md  PRINCIPAL_ENGINEER_REVIEW.md  README.md  SERIES_A_DUE_DILIGENCE_CHECKLIST.md  SERIES_A_PITCH_TALKING_POINTS.md  TECHNICAL_REVIEW_MASTER_SUMMARY.md
reports/production_fixes/: AUDIT_EXECUTIVE_SUMMARY.md  DEPLOYMENT_FIXES_GUIDE.md  INDEX.md  PRODUCTION_FIXES_SUMMARY.md
scripts/: check_db_tables.py  check_partitions.py  check_schema.py  debug_encryption.py  list_tables.py  remediate_billing_table.py  run_archival_setup.py  security_audit.sh  seed_pricing_plans.py
terraform/: cloudsentinel-role.tf  valdrix-role.tf
tests/: conftest.py  test_api_endpoints.py  test_audit_log.py  test_audit_phase_2.py  test_audit_remediation_lifecycle.py  test_audit_verification.py  test_auth.py  test_autonomous_logic.py  test_aws_adapter.py  test_aws_cur.py  test_aws_cur_streaming.py  test_aws_multitenant.py  test_azure_backend.py  test_billing.py  test_blind_indexing.py  test_cache_service.py  test_carbon_calc.py  test_carbon_calculator.py  test_circuit_breaker.py  test_cleanup_logic.py  test_config_validation.py  test_connections_unit.py  test_cost_aggregator.py  test_cost_cache_root.py  test_cost_governance.py  test_cost_persistence.py  test_cur_adapter_root.py  test_cur_automation.py  test_delta_analysis.py  test_detector.py  test_detector_core.py  test_due_diligence.py  test_encryption.py  test_fail_closed_budget.py  test_finops_analyzer.py  test_forecaster_markers.py  test_forecasting_realism.py  test_gcp_backend.py  test_graceful_degradation.py  test_graviton_analyzer.py  (+40 more)
tests/adapters/: test_aws_multitenant.py
tests/fixes/: test_all_fixes.py
tests/integration/: test_cost_aggregation.py  test_multi_cloud_report.py  test_zombie_scan.py
tests/load/: baseline.js  stress_test_scans.py
tests/unit/: test_hard_cap_service.py  test_pricing_phase36.py
use/: COMPLETION_SUMMARY.txt  INTEGRATION_CHECKLIST.md  MANIFEST.md  PRODUCTION_AUDIT_REPORT.md  README_FIXES.md
(+256 files in other folders)
