[project]
name = "valdrix"
version = "0.1.0"
description = "Heroic Intelligence for Cloud Spend - The Autonomous FinOps & GreenOps Guardian"
authors = [
    { name = "Dare AbdulGoniyy", email = "adelekedare2012@gmail.com" }
]
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Valdrix-AI/valdrix"
Repository = "https://github.com/Valdrix-AI/valdrix"
Issues = "https://github.com/Valdrix-AI/valdrix/issues"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=25.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "apscheduler>=3.11.0",
    "boto3>=1.35.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "httpx>=0.28.0",
    # Database (add these for Phase 1)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "slack-sdk>=3.39.0",
    "cryptography>=44.0.0",
    "sqlalchemy-utils>=0.42.1",
    "codecarbon>=2.7.1",
    "nvidia-ml-py>=12.535.133",
    "aioboto3>=15.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
