[project]
name = "valdrix"
version = "0.1.0"
description = "Heroic Intelligence for Cloud Spend - The Autonomous FinOps & GreenOps Guardian"
authors = [
    { name = "Dare AbdulGoniyy", email = "adelekedare2012@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.8.0",
    "structlog>=25.1.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.21.0",
    "apscheduler>=3.11.0",
    "boto3>=1.35.0",
    "langchain>=1.2.6",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pyjwt>=2.10.0",
    "slack-sdk>=3.39.0",
    "cryptography>=44.0.0",
    "sqlalchemy-utils>=0.42.1",
    "codecarbon>=2.7.1",
    "redis>=7.1.0",
    "upstash-redis>=1.5.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "statsmodels>=0.14.0",
    "aioboto3>=14.0.0",
    "slowapi>=0.1.9",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.1.0",
    "azure-mgmt-network>=30.1.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "azure-mgmt-resource>=23.0.0",
    "google-cloud-compute>=1.42.0",
    "google-cloud-billing>=1.13.0",
    "google-cloud-asset>=3.20.0",
    "google-cloud-bigquery>=3.14.0",
    "nvidia-ml-py>=13.590.44",
    "azure-mgmt-monitor>=6.0.0",
    "google-cloud-logging>=3.11.0",
    "aiobreaker>=1.2.0",
    "fastapi-csrf-protect>=1.0.7",
    "pyasn1>=0.6.2",
    "celery>=5.3.0",
    "sse-starlette>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/valdrix/valdrix"
Repository = "https://github.com/valdrix/valdrix"
Issues = "https://github.com/valdrix/valdrix/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "moto[server]>=5.0.0",
    "pytest-mock>=3.14.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.14.11",
    "safety>=3.7.0",
    "moto[server]>=5.0.0",
    "pytest-mock>=3.14.0",
    "aiosqlite>=0.20.0",
    "mypy>=1.14.0",
    "types-boto3>=1.35.0",
    "sqlalchemy[mypy]>=2.0.46",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: marks tests as integration tests (require database)",
]
filterwarnings = [
]
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*", "*/migrations/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
